simplify the error dialog a bit
test:

```python
from java.lang import RuntimeException
from org.openlca.app.util import ErrorReporter

ErrorReporter.on("Database import failed", RuntimeException("There is not enough space on the disk"))
```